fixed minor styling and alignment issues.

--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body{
     flex-shrink: 0;
     border-top: 8px solid gold;
     background-color: #add8e6;
-    text-shadow: 2px 1px 2px black
+    text-shadow: 2px 1px 2px black;
 }
 
 #contactForm{
@@ -82,14 +82,14 @@ body{
         width: auto;
     }
     #navbarLogo{
-        width: 160px;
-        height: 160px;
+        width: 120px;
+        height: 120px;
     }
     .carousel{
         display: none;
     }
     .aboutUsContainer{
-        margin: 5%;
+        margin-top: 5%;
     }
 }
 
